# food-semantic-segmentation

./: .gitignore  README.md  app.py  config.py  dataset_generator.py  mypy.ini  pyproject.toml  requirements.txt  train.py
UI/: config.py  layout.py  utils.py
backend/: __init__.py
backend/models/: bisenetv2.py
foodseg/: dataset_generator.py  datasets.py  evaluate.py  train.py  utils.py
foodseg/models/: deeplabv3.py  unet.py
scripts/: evalute_batch.py  generate_dataset.py  generate_video.py
