[project]
name = "food-semantic-segmentation"
version = "0.1.0"
authors = [{ name = "iyume", email = "iyumelive@gmail.com" }]
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "numpy==1.23.5",
    "opencv-python==4.5.4.60",
    "torch==1.11.0",
    "torchvision==0.12.0",
    "click~=8.0",
]

[project.scripts]
foodseg-train = "foodseg.train:cli"
foodseg-evaluate = "foodseg.evaluate:cli"

[tool.isort]
profile = "black"
skip_gitignore = true
